# homework_Team2

./: .gitignore  CMakeLists.txt
homework_Team2/: CMakeLists.txt  Publication.cpp  Publication.h  homework_Team2.cpp  homework_Team2.h
